--- a/index.html
+++ b/index.html
@@ -48,7 +48,10 @@
         onmouseout="preparationNormal()"
       >
         <h2>
-          Preparation <i class="fa fa-check-circle" aria-hidden="true"></i>
+          Preparation
+          <i css="fa fa-check-circle" aria-hidden="true">
+            <img class="icon" src=".//img/mug-hot-solid.svg"
+          /></i>
         </h2>
         <ol>
           <li>Run the tap a little so then water</li>
