--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <h2>
           Preparation
           <i css="fa fa-check-circle" aria-hidden="true">
-            <img class="icon" src=".//img/mug-hot-solid.svg"
+            <img class="icon" src=".//img/mug-hot-solid.svg" draggable="false"
           /></i>
         </h2>
         <ol>
